Fix overlapping entries in add column dialog
Fixes #330

Using the direct child ul selector avoids setting the height for nested ul elements.

--- a/src/styles/_view_lineup.scss
+++ b/src/styles/_view_lineup.scss
@@ -368,7 +368,7 @@ $lu_assets: '~lineupjs/src/assets';
           left: -15em;
           z-index: 2;
 
-          ul {
+          > ul {
             max-height: 50vh;
           }
         }
